# memo-moa-kh-fastapi

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
middleware/: rate_limit.py
routes/: parser.py
service/: en_parser.py  kiwi_parser.py  parser.py
