[project]
name = "mecab-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.115.0",
    "kiwipiepy>=0.23.1",
    "spacy>=3.8.14",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
